src/objects/GoogleDriveLog__c.object
<CustomObject>
    <description>This custom object stores log records created during the Google Drive Opportunity integration.</description>
    <fields>
        <fullName>LogLevel__c</fullName>
        <label>Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <description>The date and time that the log entry was created.</description>
        <inlineHelpText>The date and time that the log entry was created.</inlineHelpText>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Google Drive Log</label>
    <nameField>
        <displayFormat>Log-{0}</displayFormat>
        <label>Log Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Google Drive Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>